chart/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: aspecta
  labels:
    app.kubernetes.io/name: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 8000
      targetPort: http
